--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
 	"type":"repository",
 	"version":"master",
-	"category":"Commerce Cloud",
+	"category":"Overall Engagement",
 	"name":"Increase the Number of Shares on Chatter",
 	"image":"https://drive.google.com/uc?id=1GEMHh-QlQ6YUZoKw831oxQAuz81G9uXo",
 	"description":"Get the Following Boosters: Increase the Number of opportunity, Increase the opportunities won, Your sales will grow rapidly",
